--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "dependencies": {
         "bootstrap": "4.1.1",
         "font-awesome": "4.7.0",
+        "global": "^4.3.2",
         "jquery": "3.3.1",
         "jquery.easing": "^1.4.1"
     },
