--- a/package.json
+++ b/package.json
@@ -32,6 +32,9 @@
         "jquery": "3.3.1",
         "jquery.easing": "^1.4.1"
     },
+    "scripts": {
+        "start": "gulp"
+    },
     "devDependencies": {
         "browser-sync": "2.24.5",
         "gulp": "^3.9.1",
